--- a/DotNetPerf/Views/Shared/_Layout.cshtml
+++ b/DotNetPerf/Views/Shared/_Layout.cshtml
@@ -1,17 +1,45 @@
-﻿<!DOCTYPE html>
-
+<!DOCTYPE html>
 <html>
-<head>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>@ViewBag.Title</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/4.0.3/codemirror.min.css">
 
-    <script src="~/Scripts/jquery-2.1.3.min.js"></script>
-    <script src="~/Scripts/knockout-3.2.0.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/4.0.3/codemirror.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/4.0.3/mode/clike/clike.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/4.0.3/mode/vb/vb.min.js"></script>
-</head>
-<body>
-@RenderBody()
-</body>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/knockout/3.2.0/knockout-min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/knockout.mapping/2.4.1/knockout.mapping.min.js"></script>
+    
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/mode-csharp.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/mode-vbscript.js"></script>
+
+    <script src="//rawgithub.com/probonogeek/knockout-ace/master/knockout-ace.js"></script>
+    
+    <!--[if lt IE 9]>
+      <script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+        
+    <style type="text/css">
+        .editor {
+          height: 250px;
+          width: 500px;
+        }
+        .editor-container{
+          height: 250px;
+        }
+    </style>
+    
+  </head>
+  <body>
+    <div class="container">
+      @RenderBody()
+    </div>
+
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+  </body>
 </html>
